# os-mcp

./: README.md  TODO.md  dockerfile  pyproject.toml
src/: server.py
src/api_service/: os_api.py
src/mcp_service/: os_service.py  routing_service.py
