[project]
name = "os-mcp"
version = "0.1.6"
description = "A Python MCP server that provides access to Ordnance Survey's DataHub APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "anthropic>=0.71.0",
    "fastapi>=0.120.0",
    "mcp>=1.19.0",
    "starlette>=0.48.0",
    "uvicorn>=0.38.0",
]
